# SDIZO3-DKP-TSP

./: CMakeLists.txt  Element.h  KomiwojazerAlgZachlanny.cpp  KomiwojazerAlgZachlanny.h  KomiwojazerPrzegladZupelny.cpp  KomiwojazerPrzegladZupelny.h  PlecakAlgZachlanny.cpp  PlecakAlgZachlanny.h  PlecakPrzegladZupelny.cpp  PlecakPrzegladZupelny.h  Testy.cpp  Testy.h  main.cpp
